src/test/deca/context/valid/homemade/affecta_de_la_affecta_decompile.res
{
	float a = 2.5;
	int b;
	int c = 5;
	float d = (a + c);
	(a = (b = c));
	println(b);
	println(a);
	println(d);
}
