src/test/deca/context/invalid/homemade/op_bool_mauv_decompile.res
{
	boolean b = (true && 1);
}
